force-app/main/default/objects/Sample_Display_Customer_Confirm__c/Sample_Display_Customer_Confirm__c.object-meta.xml
<CustomObject>
    <label>Sample Display Customer Confirm</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Sample Display Code 2</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Display Customer Confirm</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>