force-app/main/default/objects/Sample_Display_Customer_Confirm__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <formula>TEXT( Sample_Display__r.Approval_Status__c )</formula>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>