force-app/main/default/objects/Sample_Display_Customer_Confirm__c/fields/Have_SAP_Customer_Detail__c.field-meta.xml
<CustomField>
    <fullName>Have_SAP_Customer_Detail__c</fullName>
    <label>*Have SAP Customer Detail</label>
    <summaryForeignKey>SAP_Customer_Detail__c.Sample_Display_Customer_Confirm__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>