force-app/main/default/objects/Sample_Display_Customer_Confirm__c/fields/Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Model__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Model</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Sample Display Customer Confirm</relationshipLabel>
    <relationshipName>Sample_Display_Customer_Confirm</relationshipName>
    <type>Lookup</type>
</CustomField>