force-app/main/default/objects/Sample_Display_Customer_Confirm__c/fields/Sap_Number__c.field-meta.xml
<CustomField>
    <fullName>Sap_Number__c</fullName>
    <label>Sap Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>