force-app/main/default/objects/Sample_Display_Customer_Confirm__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( Have_SAP_Customer_Detail__c &gt; 0, 
 IF( Have_No_Pod__c &gt; 0, &apos;part active&apos;, &apos;active&apos;) 
, &apos;inactive&apos;)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>