force-app/main/default/objects/Sample_Display_Customer_Confirm__c/fields/Task_Level__c.field-meta.xml
<CustomField>
    <fullName>Task_Level__c</fullName>
    <formula>Sample_Display__r.RecordType.DeveloperName</formula>
    <label>Task Level</label>
    <type>Text</type>
</CustomField>