force-app/main/default/objects/Sample_Display_Customer_Confirm__c/fields/ZD_Customer__c.field-meta.xml
<CustomField>
    <fullName>ZD_Customer__c</fullName>
    <label>ZD Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>